--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
 <div class="entete">
     <div class="nom-contenneur">
-        <p class="nom-site">
+        <a href="index.html" class="nom-site">
             SnowTravel
-        </p>
+        </a>
     </div>
     <div class="entete-droite">
         <div class="bouton-contenneur">
