Liste des voyages et modification mineure

--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
             <input type="text" placeholder="Rechercher..." class="barre-recherche">
         </div>
         <div class="bouton-contenneur">
+            <a href="liste.html" class="connexion-lien">
+                <button class="bouton">
+                    Réserver
+                </button>
+            </a>
+        </div>
+        <div class="bouton-contenneur">
             <a href="connexion.html" class="connexion-lien">
                 <button class="bouton">
                     Se connecter
