--- a/inscription.html
+++ b/inscription.html
@@ -46,32 +46,44 @@
     <div class="formulaire-contenneur">
         <form action="profil.html" method="post">
 
-                <div class="sous-partie">
-                    <label for="mail" class="formu-lab">
-                        E-Mail
-                    </label>
-                    <input type="email" id="mail" required class="input-formu" placeholder="E-mail...">
-                </div>
-                <div class="sous-partie">
-                    <label for="mdp" class="formu-lab">
-                        Mot de passe
-                    </label>
-                    <input type="password" id="mdp" required class="input-formu" placeholder="Mot de passe...">
-                </div>
-                <div class="sous-partie">
-                    <button type="submit" class="bouton-form" style="max-width: 150px; place-self: center">
-                        Se connecter
-                    </button>
-                </div>
-                <div class="sous-partie">
-                    <p style="font-family: Arial, sans-serif; font-size: 15px; text-align: center; margin-top: 50px">
-                        Vous n'avez pas de compte?
-                    </p>
-                </div>
+            <div class="sous-partie">
+                <label for="nom" class="formu-lab">
+                    Nom
+                </label>
+                <input type="text" id="nom" required class="input-formu" placeholder="Nom...">
+            </div>
+            <div class="sous-partie">
+                <label for="prenom" class="formu-lab">
+                    Prénom
+                </label>
+                <input type="text" id="prenom" required class="input-formu" placeholder="Prénom...">
+            </div>
+            <div class="sous-partie">
+                <label for="mail" class="formu-lab">
+                    E-Mail
+                </label>
+                <input type="email" id="mail" required class="input-formu" placeholder="E-mail...">
+            </div>
+            <div class="sous-partie">
+                <label for="mdp" class="formu-lab">
+                    Mot de passe
+                </label>
+                <input type="password" id="mdp" required class="input-formu" placeholder="Mot de passe...">
+            </div>
+            <div class="sous-partie">
+                <button type="submit" class="bouton-form" style="max-width: 150px; place-self: center">
+                    Se connecter
+                </button>
+            </div>
+            <div class="sous-partie">
+                <p style="font-family: Arial, sans-serif; font-size: 15px; text-align: center; margin-top: 50px">
+                    Vous avez un compte?
+                </p>
+            </div>
         </form>
-        <a href="inscription.html">
+        <a href="connexion.html">
             <button class="bouton-form">
-                S'inscrire
+                Se connecter
             </button>
         </a>
 
