--- a/inscription.html
+++ b/inscription.html
@@ -72,7 +72,7 @@
             </div>
             <div class="sous-partie">
                 <button type="submit" class="bouton-form" style="max-width: 150px; place-self: center">
-                    Se connecter
+                    S'inscrire
                 </button>
             </div>
             <div class="sous-partie">
