--- a/liste.html
+++ b/liste.html
@@ -46,31 +46,37 @@
     <div class="image-destination">
       <a href="reservation.html">
         <img src="assets/img/destination1.png" width="600" height="400" style="border-radius: 30px">
+        <div class="hover-text">Norvège</div>
       </a>
     </div>
     <div class="image-destination">
       <a href="reservation.html">
         <img src="assets/img/destination2.png" width="600" height="400" style="border-radius: 30px">
+        <div class="hover-text">Canada</div>
       </a>
     </div>
     <div class="image-destination">
       <a href="reservation.html">
         <img src="assets/img/destination3.png" width="600" height="400" style="border-radius: 30px">
+        <div class="hover-text">Alaska</div>
       </a>
     </div>
     <div class="image-destination">
       <a href="reservation.html">
         <img src="assets/img/destination4.png" width="600" height="400" style="border-radius: 30px">
+        <div class="hover-text">Suède</div>
       </a>
     </div>
     <div class="image-destination">
       <a href="reservation.html">
         <img src="assets/img/destination5.png" width="600" height="400" style="border-radius: 30px">
+        <div class="hover-text">Finlande</div>
       </a>
     </div>
     <div class="image-destination">
       <a href="reservation.html">
         <img src="assets/img/destination6.png" width="600" height="400" style="border-radius: 30px">
+        <div class="hover-text">Islande</div>
       </a>
     </div>
 </section>
