Rendu-finale-finale phase #1

--- a/profil.html
+++ b/profil.html
@@ -48,7 +48,7 @@
         <div>
             <div style="display: flex; align-content: center;">
                 <h2 style="font-family: Arial, sans-serif; font-size: 25px; place-self: center">
-                    My Account
+                    Mon Compte
                 </h2>
                 <a href="profil.html">
                     <img src="assets/img/modif.png" width="30" height="30" style="margin: 25px;">
