--- a/liste.html
+++ b/liste.html
@@ -42,6 +42,38 @@
   </div>
 </div>
 
+<section class="filtrage">
+  <div style="text-align: center; margin: 15px">
+    <p style="font-size: 20px;
+     font-family: Arial, sans-serif;">Lieu :</p>
+  </div>
+  <div style="display: grid; place-content: center">
+      <select class="filtre">
+        <option value="tout">Tout</option>
+
+        <option value="Campage">Campage</option>
+
+        <option value="Ville">Ville</option>
+
+        <option value="Banlieue">Banlieu</option>
+      </select>
+  </div>
+  <div style="text-align: center; margin: 15px">
+    <p style="font-size: 20px;
+     font-family: Arial, sans-serif;">Continent :</p>
+  </div>
+  <div style="display: grid; place-content: center">
+    <select class="filtre">
+      <option value="tout">Tout</option>
+
+      <option value="Campage">Europe</option>
+
+      <option value="Ville">Amérique du Nord</option>
+    </select>
+  </div>
+
+</section>
+
 <section class="bloc-liste">
     <div class="image-destination">
       <a href="reservation.html">
